--- a/contact.html
+++ b/contact.html
@@ -63,9 +63,9 @@
 
     <!-- contact page items-->
 
-    <div id="contact" class="col-10 offset-1 col-md-6 offset-md-3">
+    <div id="contact" class="col-10 offset-1 col-md-6 offset-md-3 shadow-lg">
         <p>Enter your details below and we will be in touch to arrange an appointment</p>
-        <form name="contactform" method="post" class="needs-validation" novalidate>
+        <form name="contactform" method="post" class="needs-validation " novalidate>
             <div class="input-group mb-3 has-validation">
                 <span class="input-group-text" id="inputGroupPrepend"><i class="fa-solid fa-user" style="color: #000000;"></i></span>
         <input type="text" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="First Name" required>
@@ -141,7 +141,7 @@
     <div class="col-sm-4 offset-sm-2">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13436.470446849411!2d-9.095015!3d53.997897!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48594f001623c511%3A0x49d3bd05e0ce7bc7!2sWoof%20Cutz%20-%20Dog%20Groomer!5e1!3m2!1sen!2sie!4v1733324795886!5m2!1sen!2sie" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <div class="col-sm-3 align-items-center">
+    <div class="col-sm-3 align-items-center" id="contactdets">
         <h4 class="align-middle">Contact Details</h4>
         <a href="tel:+353871234567"><i class="fa-solid fa-phone"></i> 087 1234 567</a><br>
         <a href="mailto:info@woofcutz.ie"><i class="fa-solid fa-envelope"></i> info@woofcutz.ie</a><br>
