--- a/services.html
+++ b/services.html
@@ -129,7 +129,7 @@
         </div>
         <h1>Our reviews</h1>
 
-        <div id="carouselExampleCaptions" class="carousel slide col-12" data-bs-ride="carousel" >
+        <div id="carouselExampleCaptions" class="carousel slide col-12 col-sm-8 offset-sm-2" data-bs-ride="carousel" >
             <div class="carousel-indicators" >
               <button type="button" data-bs-target="#carouselExampleCaptions" style="background-color:black;" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
