--- a/services.html
+++ b/services.html
@@ -2,7 +2,6 @@
 <head>
     <title>Woof Cutz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsive design -->
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="stylesercon.css">
     <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -12,62 +11,57 @@
 
 </head>
 <body class="Light-mode">
-    <!-- Include Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+  <div class="theme-toggle-container">
+    <button class="theme-toggle" aria-label="Toggle Theme">🌛</button>
+</div>  
+  <!-- Navbar-->
+ <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+      <!-- Logo and Brand Name -->
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+          <img src="images/logo.webp" alt="Golden Lab Logo" width="120" height="90" class="d-inline-block align-text-center me-2">
+          Woof Cutz
+      </a>
 
-    <!-- Theme Toggle Button -->
-    <div class="theme-toggle-container">
-        <button class="theme-toggle" aria-label="Toggle Theme">🌛</button>
-    </div>
+      <!-- Navbar Toggler Button for Collapsible Menu -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
 
-     <!-- Navbar-->
-     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <!-- Logo and Brand Name -->
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="images/golden lab.png" alt="Golden Lab Logo" width="150" height="150" class="d-inline-block align-text-center me-2">
-                Woof Cutz
-            </a>
-
-            <!-- Navbar Toggler Button for Collapsible Menu -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <!-- Collapsible Menu -->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> <!-- Push to the right using ms-auto -->
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gallery.html">Gallery</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Services
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Service1</a></li>
-                            <li><a class="dropdown-item" href="#">Service2</a></li>
-                            <li><a class="dropdown-item" href="#">Service3</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+      <!-- Collapsible Menu -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> <!-- Push to the right using ms-auto -->
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#about-us">About Us</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Services
+                  </a>
+                  <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="services.html#service-container">Our offerings</a></li>
+                      <li><a class="dropdown-item" href="services.html#faq">FAQs</a></li>
+                      <li><a class="dropdown-item" href="services.html#reviews">Reviews</a></li>
+                  </ul>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+          </ul>
+      </div>
+      
+  </div>
+</nav>
     <div id="service-container">
     <div class="row service-cards">
         <div class="col-sm-4">
             <div class="card h-100">
               <img src="/images/nail-clipping-6926862_640.jpg" class="card-img-top" alt="...">
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Nail triming</h5>
+                <h5 class="card-title">Nail trimming</h5>
                 <p class="card-text">Keep your dog comfortable and healthy with regular nail trims! Our gentle, professional service ensures your pup's nails are perfectly maintained, preventing discomfort and mobility issues.</p>
                 <a href="/contact.html" class="btn btn-primary mt-auto">Book now!</a>
               </div>
@@ -77,7 +71,7 @@
           <div class="card h-100">
             <img src="/images/dog-7565682_640.jpg" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-ttle">Haircut</h5>
+              <h5 class="card-title">Haircut</h5>
               <p class="card-text">Give your dog a fresh, stylish look with our professional haircut services! We ensure your pup is comfortable while achieving a cut that suits their breed and personality.</p>
               <a href="/contact.html" class="btn btn-primary mt-auto">Book now!</a>
             </div>
@@ -87,7 +81,7 @@
             <div class="card h-100">
               <img src="/images/dog-wash-4125187_640.jpg" class="card-img-top" alt="...">
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Full grrom</h5>
+                <h5 class="card-title">Full groom</h5>
                 <p class="card-text">Treat your dog to a complete grooming experience! Our full groom includes bathing, brushing, nail trimming, and a stylish haircut, leaving your pup clean, comfortable, and looking their best.</p>
                 <a href="/contact.html" class="btn btn-primary mt-auto">Book now!</a>
               </div>
@@ -95,7 +89,7 @@
           </div>
       </div>
       <h1>FAQs</h1>
-    <div class="accordion accordion-flush" id="accordionFlushExample">
+    <div class="accordion accordion-flush" id="accordionFlushExample faq">
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -129,7 +123,7 @@
         </div>
         <h1>Our reviews</h1>
 
-        <div id="carouselExampleCaptions" class="carousel slide col-12 col-sm-8 offset-sm-2" data-bs-ride="carousel" >
+        <div id="carouselExampleCaptions reviews" class="carousel slide col-12 col-sm-8 offset-sm-2" data-bs-ride="carousel" >
             <div class="carousel-indicators" >
               <button type="button" data-bs-target="#carouselExampleCaptions" style="background-color:black;" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
