--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     
 </head>
 <body class="Light-mode">
-    <!-- Include Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    
 
     <div class="theme-toggle-container">
         <button class="theme-toggle" aria-label="Toggle Theme">🌛</button>
@@ -62,17 +60,17 @@
     <!-- Welcome page containers -->
     <div class="welcome-container-top">
         <div class="welcome-box">
-            <img src="images/mut1.jpg" alt="Yorkie getting a his hair combed">
+            <img src="images/mut1.jpg" alt="Yorkie getting a his hair combed" class="w-100">
             <h2>Welcome to Woof Cuts</h2>
             <p>Co. Mayo’s trusted destination for exceptional dog grooming services.</p>
         </div>
         <div class="welcome-box">
-            <img src="images/mut2.jpg" alt="Small dog getting a trim">
+            <img src="images/mut2.jpg" alt="Small dog getting a trim" class="w-100">
             <h2>Professional Grooming</h2>
             <p>From baths to nail trimming, we ensure your dog looks and feels great!</p>
         </div>
         <div class="welcome-box">
-            <img src="images/mut3.jpg" alt="Happy dog with after bath">
+            <img src="images/mut3.jpg" alt="Happy dog with after bath" class="w-100">
             <h2>Friendly Environment</h2>
             <p>A calm and welcoming space for dogs of all breeds and sizes.</p>
         </div>
@@ -88,7 +86,7 @@
     <!-- Google Map -->
     <div class="map-container">
         <h1 id="location">Our Location</h1>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9939.438389581295!2d-9.109632137977059!3d53.9957608966133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48594f001623c511%3A0x49d3bd05e0ce7bc7!2sWoof%20Cutz%20-%20Dog%20Groomer!5e0!3m2!1sen!2sie!4v1732142061725!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9939.438389581295!2d-9.109632137977059!3d53.9957608966133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48594f001623c511%3A0x49d3bd05e0ce7bc7!2sWoof%20Cutz%20-%20Dog%20Groomer!5e0!3m2!1sen!2sie!4v1732142061725!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="map"></iframe>
     </div>
 
     <!-- Footer Section -->
@@ -115,7 +113,9 @@
             <p>&copy; 2024 Woof Cuts. All Rights Reserved.</p>
         </div>
     </footer>
-
+    <!-- Include Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <!-- FontAwesome Script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 </body>
