--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> <!-- Push to the right using ms-auto -->
                   <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#about-us">About Us</a>
+                      <a class="nav-link active" aria-current="page" href="https://ncigroupproject.github.io/index.html#about-us">About Us</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="gallery.html">Gallery</a>
@@ -175,10 +175,10 @@
        (function (){
        'use strict'
 
-  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  
   const forms = document.querySelectorAll('.needs-validation')
 
-  // Loop over them and prevent submission
+
   Array.from(forms).forEach(form => {
     form.addEventListener('submit', event => {
       if (!form.checkValidity()) {
