--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
                   <a class="nav-link" href="gallery.html">Gallery</a>
               </li>
               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="https://ncigroupproject.github.io/index.html#about-us" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Services
                   </a>
                   <ul class="dropdown-menu">
