--- a/services.html
+++ b/services.html
@@ -65,27 +65,27 @@
     <div class="row service-cards">
         <div class="col-sm-4">
             <div class="card h-100">
-              <img src="/images/nail-clipping-6926862_640.jpg" class="card-img-top" alt="...">
+              <img src="images/nail-clipping-6926862_640.jpg" class="card-img-top" alt="dog getting nail trim">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Nail trimming</h5>
                 <p class="card-text">Keep your dog comfortable and healthy with regular nail trims! Our gentle, professional service ensures your pup's nails are perfectly maintained, preventing discomfort and mobility issues.</p>
-                <a href="/contact.html" class="btn btn-primary mt-auto">Book now!</a>
+                <a href="contact.html" class="btn btn-primary mt-auto">Book now!</a>
               </div>
             </div>
           </div>
         <div class="col-sm-4">
           <div class="card h-100">
-            <img src="/images/dog-7565682_640.jpg" class="card-img-top" alt="...">
+            <img src="images/dog-7565682_640.jpg" class="card-img-top" alt="dog getting hair cut">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Haircut</h5>
               <p class="card-text">Give your dog a fresh, stylish look with our professional haircut services! We ensure your pup is comfortable while achieving a cut that suits their breed and personality.</p>
-              <a href="/contact.html" class="btn btn-primary mt-auto">Book now!</a>
+              <a href="contact.html" class="btn btn-primary mt-auto">Book now!</a>
             </div>
           </div>
         </div>
         <div class="col-sm-4">
             <div class="card h-100">
-              <img src="/images/dog-wash-4125187_640.jpg" class="card-img-top" alt="...">
+              <img src="images/dog-wash-4125187_640.jpg" class="card-img-top" alt="Dog getting washed">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Full groom</h5>
                 <p class="card-text">Treat your dog to a complete grooming experience! Our full groom includes bathing, brushing, nail trimming, and a stylish haircut, leaving your pup clean, comfortable, and looking their best.</p>
